@@ -1,9 +1,9 @@
 #ifndef	_ADDBBS_H
 #define	_ADDBBS_H
 
+/* $Id$ */
 
-int Add_BBS(void);
 
+int Add_BBS(qualify **);
 
 #endif
-
